[tool.poetry]
name = "web-11-kuchma-2"
version = "0.1.0"
description = ""
authors = ["Vesnani <132687769+Vesnani@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_11_kuchma_2"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2 = "^2.9.7"
alembic = "^1.12.0"
sqlalchemy = "^2.0.20"
pydantic = {extras = ["email"], version = "^2.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
